-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0
-
2b4c9cfa4 (dev), 56bca3cda (6.7), 7366f4d8a (tqtc/lts-6.5), b979b763b (dev), 83ceb0e22 (6.7), c1192075b (tqtc/lts-6.5)
-
Multimedia wk 19-20
MediaPlayer fails to play rpt video stream using sdp file, and it throws the following error when running the sdp file:
[rtp @ 000002751D9958C0] Protocol 'rtp' not on whitelist 'file,crypto,data'!
To reproduce the issue:
- Start a stream into a specific server.
- Edit the attached sdp file to match your stream server (ip and port).
- Run the MediaPlayer qml example application.
- Load the sdp file.
The stream won't play and the app will log the following error:
[rtp @ 000002751D9958C0] Protocol 'rtp' not on whitelist 'file,crypto,data'!